--- a/config.yaml.example
+++ b/config.yaml.example
@@ -7,9 +7,9 @@ providers:
   - name: "bedrock_claude"
     model: "anthropic.claude-3-haiku-20240307-v1:0"
   - name: "openai"
-    model: "gpt-4.1-nano-2025-04-14"
+    model: "gpt-4o-mini"
   - name: "gemini"
-    model: "gemini-2.0-flash-lite"
+    model: "gemini-1.5-flash"
 
 # Test execution settings
 delay_between_calls: 1      # seconds between API calls (rate limiting)
@@ -17,30 +17,162 @@ delay_between_test_cases: 2 # seconds between test cases
 
 # Test cases - define your specific tests here
 test_cases:
-  - name: "Basic Image Analysis"
-    prompt: "Describe what you see in this image in detail. Include objects, people, setting, and any text visible."
-    image_path: "test_images/sample.jpg"
+  - name: "Multi-Tool Image Analysis"
+    prompt: "You are an expert analyst. Examine this image carefully and determine what type of item it is, then provide structured analysis using the most appropriate method. Choose the analysis type that best matches what you see in the image."
+    image_path: "test_images/Radioheadokcomputer.png"
     max_tokens: 2000
     temperature: 0.7
+    # Multi-tool configuration - AI chooses the best analysis method
+    tools:
+      - name: "analyze_music_album"
+        description: "Use for music albums, vinyl records, CDs, and music-related items"
+        schema:
+          type: "object"
+          properties:
+            item_type:
+              type: "string"
+              description: "Type of music item (vinyl, cd, digital, etc.)"
+            title:
+              type: "string"
+              description: "Album or song title"
+            artist:
+              type: "string"
+              description: "Primary artist or band name"
+            year:
+              type: "string"
+              description: "Release year or era"
+            genre:
+              type: "string"
+              description: "Musical genre"
+            label:
+              type: "string"
+              description: "Record label or publisher"
+            condition:
+              type: "string"
+              enum: ["Mint", "Near Mint", "Very Good", "Good", "Fair", "Poor", "Cannot assess"]
+              description: "Physical condition assessment"
+            confidence:
+              type: "number"
+              minimum: 0.0
+              maximum: 1.0
+              description: "Analysis confidence score"
+          required: ["item_type", "title", "artist", "confidence"]
+          
+      - name: "analyze_book"
+        description: "Use for books, magazines, publications, and printed materials"
+        schema:
+          type: "object"
+          properties:
+            item_type:
+              type: "string"
+              description: "Type of publication (book, magazine, manual, etc.)"
+            title:
+              type: "string"
+              description: "Title of the publication"
+            author:
+              type: "string"
+              description: "Author or primary creator"
+            publisher:
+              type: "string"
+              description: "Publishing company"
+            year:
+              type: "string"
+              description: "Publication year"
+            genre:
+              type: "string"
+              description: "Genre or category"
+            isbn:
+              type: "string"
+              description: "ISBN if visible"
+            condition:
+              type: "string"
+              enum: ["Fine", "Very Fine", "Near Fine", "Very Good", "Good", "Fair", "Poor", "Cannot assess"]
+              description: "Physical condition"
+            confidence:
+              type: "number"
+              minimum: 0.0
+              maximum: 1.0
+              description: "Analysis confidence score"
+          required: ["item_type", "title", "author", "confidence"]
+          
+      - name: "analyze_artwork"
+        description: "Use for paintings, prints, posters, and visual art"
+        schema:
+          type: "object"
+          properties:
+            item_type:
+              type: "string"
+              description: "Type of artwork (painting, print, poster, etc.)"
+            title:
+              type: "string"
+              description: "Title or subject of the artwork"
+            artist:
+              type: "string"
+              description: "Artist or creator name"
+            style:
+              type: "string"
+              description: "Artistic style or movement"
+            medium:
+              type: "string"
+              description: "Materials used (oil, watercolor, digital, etc.)"
+            year:
+              type: "string"
+              description: "Creation year or era"
+            condition:
+              type: "string"
+              description: "Physical condition assessment"
+            confidence:
+              type: "number"
+              minimum: 0.0
+              maximum: 1.0
+              description: "Analysis confidence score"
+          required: ["item_type", "title", "artist", "confidence"]
+          
+      - name: "analyze_general_object"
+        description: "Use for any other objects, collectibles, or items not covered by other categories"
+        schema:
+          type: "object"
+          properties:
+            item_type:
+              type: "string"
+              description: "General category of the object"
+            name:
+              type: "string"
+              description: "Name or description of the object"
+            brand:
+              type: "string"
+              description: "Brand or manufacturer if applicable"
+            category:
+              type: "string"
+              description: "Specific category (toy, electronic, furniture, etc.)"
+            material:
+              type: "string"
+              description: "Primary materials"
+            year:
+              type: "string"
+              description: "Manufacturing year or era"
+            condition:
+              type: "string"
+              description: "Physical condition"
+            confidence:
+              type: "number"
+              minimum: 0.0
+              maximum: 1.0
+              description: "Analysis confidence score"
+          required: ["item_type", "name", "category", "confidence"]
     
-  - name: "Advanced Object Detection"
-    prompt: "Analyze this image and identify all objects with precise locations, confidence scores, and detailed attributes."
-    image_path: "test_images/objects.jpg"
-    max_tokens: 3000
-    temperature: 0.2
-    # Modern structured output - each provider uses their best method
+  - name: "Simple Object Detection"
+    prompt: "Identify and list all distinct objects you can see in this image with confidence scores."
+    image_path: "test_images/Radioheadokcomputer.png"
+    max_tokens: 1500
+    temperature: 0.3
+    # Single schema configuration - traditional structured output
     schema:
       type: "object"
       properties:
-        id:
+        scene_description:
           type: "string"
-          description: "Unique identifier for this analysis"
-        title:
-          type: "string"
-          description: "Descriptive title for what was detected"
-        creator:
-          type: "string"
-          description: "The source or context of the image"
+          description: "Brief description of the overall scene"
         objects:
           type: "array"
           items:
@@ -48,109 +180,59 @@ test_cases:
             properties:
               name:
                 type: "string"
-                description: "Object name/class"
+                description: "Name of the detected object"
               confidence:
                 type: "number"
                 minimum: 0.0
                 maximum: 1.0
-                description: "Detection confidence (0-1)"
-              bounding_box:
-                type: "object"
-                properties:
-                  x: 
-                    type: "number"
-                    description: "Left edge"
-                  y: 
-                    type: "number"
-                    description: "Top edge"
-                  width: 
-                    type: "number"
-                  height: 
-                    type: "number"
-                required: ["x", "y", "width", "height"]
-                additionalProperties: false
-              attributes:
-                type: "object"
-                properties:
-                  color: 
-                    type: "string"
-                  size: 
-                    type: "string"
-                    enum: ["small", "medium", "large"]
-                  material: 
-                    type: "string"
-                additionalProperties: false
-            required: ["name", "confidence", "bounding_box"]
-            additionalProperties: false
-        scene_info:
-          type: "object"
-          properties:
-            setting: 
-              type: "string"
-            lighting: 
-              type: "string"
-            time_of_day: 
-              type: "string"
-            weather: 
-              type: "string"
-          additionalProperties: false
-        confidence:
-          type: "number"
-          minimum: 0.0
-          maximum: 1.0
-          description: "Overall analysis confidence"
-      required: ["id", "title", "creator", "objects", "confidence"]
-      additionalProperties: false
+                description: "Confidence in detection (0-1)"
+              location:
+                type: "string"
+                description: "General location in image (e.g., 'center', 'top-left')"
+            required: ["name", "confidence"]
+        total_objects:
+          type: "integer"
+          description: "Total number of distinct objects detected"
+        analysis_method:
+          type: "string"
+          description: "Brief description of detection approach used"
+      required: ["scene_description", "objects", "total_objects"]
       
-  - name: "Document Processing"
-    prompt: "Extract all text and structured information from this document. Identify tables, forms, and key data points."
-    image_path: "test_images/document.png"
-    max_tokens: 4000
+  - name: "Text Extraction"
+    prompt: "Extract all visible text from this image, including any partial text, labels, or writing."
+    image_path: "test_images/Radioheadokcomputer.png"
+    max_tokens: 1500
     temperature: 0.1
     schema:
       type: "object"
       properties:
-        id:
-          type: "string"
-          description: "Unique identifier for this analysis"
-        title:
-          type: "string"
-          description: "Document title or type"
-        creator:
-          type: "string"
-          description: "Document source or issuer"
-        document_type:
-          type: "string"
-          enum: ["invoice", "receipt", "form", "contract", "report", "other"]
         extracted_text:
+          type: "array"
+          items:
+            type: "object"
+            properties:
+              text:
+                type: "string"
+                description: "The actual text found"
+              location:
+                type: "string"
+                description: "Where in the image (e.g., 'top center', 'bottom left')"
+              font_style:
+                type: "string"
+                description: "Description of text appearance"
+              confidence:
+                type: "number"
+                minimum: 0.0
+                maximum: 1.0
+                description: "Confidence in text extraction"
+            required: ["text", "location", "confidence"]
+        has_readable_text:
+          type: "boolean"
+          description: "Whether any clearly readable text was found"
+        primary_language:
           type: "string"
-          description: "All visible text in the document"
-        key_fields:
-          type: "object"
-          description: "Important fields extracted from the document"
-          additionalProperties: true
-        financial_info:
-          type: "object"
-          properties:
-            total_amount: 
-              type: "number"
-            currency: 
-              type: "string"
-            tax_amount: 
-              type: "number"
-            subtotal: 
-              type: "number"
-          additionalProperties: false
-        confidence:
-          type: "number"
-          minimum: 0.0
-          maximum: 1.0
-          description: "Overall extraction confidence"
-      required: ["id", "title", "creator", "document_type", "confidence"]
-      additionalProperties: false
-    
-  - name: "Creative Description"
-    prompt: "Write a creative, engaging description of this image suitable for social media or marketing. Be vivid and emotive."
-    image_path: "test_images/creative.jpg"
-    max_tokens: 1500
-    temperature: 0.9
+          description: "Detected primary language of text"
+        total_text_elements:
+          type: "integer"
+          description: "Number of separate text elements found"
+      required: ["extracted_text", "has_readable_text", "total_text_elements"]
